// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`branded 404s > list / android 1`] = `
{
  "body": "<!doctype html>
<html lang="en-GB">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
<title>List not found | Videx</title>
<meta name="robots" content="noindex">

<style>
:root{color-scheme:dark}
*{box-sizing:border-box}
body{margin:0;background:#0a0a0f;color:#f5f1e8;font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,sans-serif;line-height:1.5}
.wrap{max-width:640px;margin:0 auto;padding:24px 20px 48px}
h1{font-size:26px;line-height:1.15;margin:0 0 6px}
.muted{color:rgba(245,241,232,.6)}
h2{font-size:13px;letter-spacing:1.4px;text-transform:uppercase;color:rgba(245,241,232,.6);margin:24px 0 8px}
.cta{display:flex;flex-wrap:wrap;gap:12px;margin-top:28px;align-items:center}
.btn{display:inline-block;padding:12px 20px;border-radius:999px;font-weight:700;text-decoration:none;font-size:15px}
.btn-primary{background:#e85d25;color:#fff}
.btn-ghost{background:#14141c;color:#f5f1e8;border:1px solid rgba(245,241,232,.16)}
.btn-disabled{opacity:.55;cursor:default}
.cta-hint{font-size:13px;color:rgba(245,241,232,.5)}
footer{margin-top:40px;font-size:12px;color:rgba(245,241,232,.4)}
footer a{color:rgba(245,241,232,.5)}

</style>
</head>
<body>
<div class="wrap">
  <h1>List not found</h1>
  <p class="muted">This list doesn&#39;t exist.</p>
  <div class="cta"><a class="btn btn-ghost" href="https://play.google.com/store/apps/details?id=app.videx.streaming__VIDEX_PLAY_REFERRER__">Get Videx on Android</a></div>
</div>
</body>
</html>",
  "headers": {
    "cache-control": "public, max-age=300",
    "content-security-policy": "frame-ancestors 'none'",
    "content-type": "text/html; charset=utf-8",
    "x-content-type-options": "nosniff",
    "x-frame-options": "DENY",
  },
  "status": 404,
}
`;

exports[`branded 404s > list / ios 1`] = `
{
  "body": "<!doctype html>
<html lang="en-GB">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
<title>List not found | Videx</title>
<meta name="robots" content="noindex">

<style>
:root{color-scheme:dark}
*{box-sizing:border-box}
body{margin:0;background:#0a0a0f;color:#f5f1e8;font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,sans-serif;line-height:1.5}
.wrap{max-width:640px;margin:0 auto;padding:24px 20px 48px}
h1{font-size:26px;line-height:1.15;margin:0 0 6px}
.muted{color:rgba(245,241,232,.6)}
h2{font-size:13px;letter-spacing:1.4px;text-transform:uppercase;color:rgba(245,241,232,.6);margin:24px 0 8px}
.cta{display:flex;flex-wrap:wrap;gap:12px;margin-top:28px;align-items:center}
.btn{display:inline-block;padding:12px 20px;border-radius:999px;font-weight:700;text-decoration:none;font-size:15px}
.btn-primary{background:#e85d25;color:#fff}
.btn-ghost{background:#14141c;color:#f5f1e8;border:1px solid rgba(245,241,232,.16)}
.btn-disabled{opacity:.55;cursor:default}
.cta-hint{font-size:13px;color:rgba(245,241,232,.5)}
footer{margin-top:40px;font-size:12px;color:rgba(245,241,232,.4)}
footer a{color:rgba(245,241,232,.5)}

</style>
</head>
<body>
<div class="wrap">
  <h1>List not found</h1>
  <p class="muted">This list doesn&#39;t exist.</p>
  <div class="cta"><a class="btn btn-ghost" href="https://apps.apple.com/gb/app/videx-streaming-guide/id6785395342">Get Videx on iOS</a></div>
</div>
</body>
</html>",
  "headers": {
    "cache-control": "public, max-age=300",
    "content-security-policy": "frame-ancestors 'none'",
    "content-type": "text/html; charset=utf-8",
    "x-content-type-options": "nosniff",
    "x-frame-options": "DENY",
  },
  "status": 404,
}
`;

exports[`branded 404s > list / other 1`] = `
{
  "body": "<!doctype html>
<html lang="en-GB">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
<title>List not found | Videx</title>
<meta name="robots" content="noindex">

<style>
:root{color-scheme:dark}
*{box-sizing:border-box}
body{margin:0;background:#0a0a0f;color:#f5f1e8;font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,sans-serif;line-height:1.5}
.wrap{max-width:640px;margin:0 auto;padding:24px 20px 48px}
h1{font-size:26px;line-height:1.15;margin:0 0 6px}
.muted{color:rgba(245,241,232,.6)}
h2{font-size:13px;letter-spacing:1.4px;text-transform:uppercase;color:rgba(245,241,232,.6);margin:24px 0 8px}
.cta{display:flex;flex-wrap:wrap;gap:12px;margin-top:28px;align-items:center}
.btn{display:inline-block;padding:12px 20px;border-radius:999px;font-weight:700;text-decoration:none;font-size:15px}
.btn-primary{background:#e85d25;color:#fff}
.btn-ghost{background:#14141c;color:#f5f1e8;border:1px solid rgba(245,241,232,.16)}
.btn-disabled{opacity:.55;cursor:default}
.cta-hint{font-size:13px;color:rgba(245,241,232,.5)}
footer{margin-top:40px;font-size:12px;color:rgba(245,241,232,.4)}
footer a{color:rgba(245,241,232,.5)}

</style>
</head>
<body>
<div class="wrap">
  <h1>List not found</h1>
  <p class="muted">This list doesn&#39;t exist.</p>
  <div class="cta"><a class="btn btn-ghost" href="https://play.google.com/store/apps/details?id=app.videx.streaming__VIDEX_PLAY_REFERRER__">Get Videx on Android</a><a class="btn btn-ghost" href="https://apps.apple.com/gb/app/videx-streaming-guide/id6785395342">Get Videx on iOS</a></div>
</div>
</body>
</html>",
  "headers": {
    "cache-control": "public, max-age=300",
    "content-security-policy": "frame-ancestors 'none'",
    "content-type": "text/html; charset=utf-8",
    "x-content-type-options": "nosniff",
    "x-frame-options": "DENY",
  },
  "status": 404,
}
`;

exports[`branded 404s > room / android 1`] = `
{
  "body": "<!doctype html>
<html lang="en-GB">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
<title>Room not found | Videx</title>
<meta name="robots" content="noindex">

<style>
:root{color-scheme:dark}
*{box-sizing:border-box}
body{margin:0;background:#0a0a0f;color:#f5f1e8;font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,sans-serif;line-height:1.5}
.wrap{max-width:640px;margin:0 auto;padding:24px 20px 48px}
h1{font-size:26px;line-height:1.15;margin:0 0 6px}
.muted{color:rgba(245,241,232,.6)}
h2{font-size:13px;letter-spacing:1.4px;text-transform:uppercase;color:rgba(245,241,232,.6);margin:24px 0 8px}
.cta{display:flex;flex-wrap:wrap;gap:12px;margin-top:28px;align-items:center}
.btn{display:inline-block;padding:12px 20px;border-radius:999px;font-weight:700;text-decoration:none;font-size:15px}
.btn-primary{background:#e85d25;color:#fff}
.btn-ghost{background:#14141c;color:#f5f1e8;border:1px solid rgba(245,241,232,.16)}
.btn-disabled{opacity:.55;cursor:default}
.cta-hint{font-size:13px;color:rgba(245,241,232,.5)}
footer{margin-top:40px;font-size:12px;color:rgba(245,241,232,.4)}
footer a{color:rgba(245,241,232,.5)}

</style>
</head>
<body>
<div class="wrap">
  <h1>Room not found</h1>
  <p class="muted">This shared room doesn&#39;t exist.</p>
  <div class="cta"><a class="btn btn-ghost" href="https://play.google.com/store/apps/details?id=app.videx.streaming__VIDEX_PLAY_REFERRER__">Get Videx on Android</a></div>
</div>
</body>
</html>",
  "headers": {
    "cache-control": "public, max-age=300",
    "content-security-policy": "frame-ancestors 'none'",
    "content-type": "text/html; charset=utf-8",
    "x-content-type-options": "nosniff",
    "x-frame-options": "DENY",
  },
  "status": 404,
}
`;

exports[`branded 404s > room / ios 1`] = `
{
  "body": "<!doctype html>
<html lang="en-GB">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
<title>Room not found | Videx</title>
<meta name="robots" content="noindex">

<style>
:root{color-scheme:dark}
*{box-sizing:border-box}
body{margin:0;background:#0a0a0f;color:#f5f1e8;font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,sans-serif;line-height:1.5}
.wrap{max-width:640px;margin:0 auto;padding:24px 20px 48px}
h1{font-size:26px;line-height:1.15;margin:0 0 6px}
.muted{color:rgba(245,241,232,.6)}
h2{font-size:13px;letter-spacing:1.4px;text-transform:uppercase;color:rgba(245,241,232,.6);margin:24px 0 8px}
.cta{display:flex;flex-wrap:wrap;gap:12px;margin-top:28px;align-items:center}
.btn{display:inline-block;padding:12px 20px;border-radius:999px;font-weight:700;text-decoration:none;font-size:15px}
.btn-primary{background:#e85d25;color:#fff}
.btn-ghost{background:#14141c;color:#f5f1e8;border:1px solid rgba(245,241,232,.16)}
.btn-disabled{opacity:.55;cursor:default}
.cta-hint{font-size:13px;color:rgba(245,241,232,.5)}
footer{margin-top:40px;font-size:12px;color:rgba(245,241,232,.4)}
footer a{color:rgba(245,241,232,.5)}

</style>
</head>
<body>
<div class="wrap">
  <h1>Room not found</h1>
  <p class="muted">This shared room doesn&#39;t exist.</p>
  <div class="cta"><a class="btn btn-ghost" href="https://apps.apple.com/gb/app/videx-streaming-guide/id6785395342">Get Videx on iOS</a></div>
</div>
</body>
</html>",
  "headers": {
    "cache-control": "public, max-age=300",
    "content-security-policy": "frame-ancestors 'none'",
    "content-type": "text/html; charset=utf-8",
    "x-content-type-options": "nosniff",
    "x-frame-options": "DENY",
  },
  "status": 404,
}
`;

exports[`branded 404s > room / other 1`] = `
{
  "body": "<!doctype html>
<html lang="en-GB">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
<title>Room not found | Videx</title>
<meta name="robots" content="noindex">

<style>
:root{color-scheme:dark}
*{box-sizing:border-box}
body{margin:0;background:#0a0a0f;color:#f5f1e8;font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,sans-serif;line-height:1.5}
.wrap{max-width:640px;margin:0 auto;padding:24px 20px 48px}
h1{font-size:26px;line-height:1.15;margin:0 0 6px}
.muted{color:rgba(245,241,232,.6)}
h2{font-size:13px;letter-spacing:1.4px;text-transform:uppercase;color:rgba(245,241,232,.6);margin:24px 0 8px}
.cta{display:flex;flex-wrap:wrap;gap:12px;margin-top:28px;align-items:center}
.btn{display:inline-block;padding:12px 20px;border-radius:999px;font-weight:700;text-decoration:none;font-size:15px}
.btn-primary{background:#e85d25;color:#fff}
.btn-ghost{background:#14141c;color:#f5f1e8;border:1px solid rgba(245,241,232,.16)}
.btn-disabled{opacity:.55;cursor:default}
.cta-hint{font-size:13px;color:rgba(245,241,232,.5)}
footer{margin-top:40px;font-size:12px;color:rgba(245,241,232,.4)}
footer a{color:rgba(245,241,232,.5)}

</style>
</head>
<body>
<div class="wrap">
  <h1>Room not found</h1>
  <p class="muted">This shared room doesn&#39;t exist.</p>
  <div class="cta"><a class="btn btn-ghost" href="https://play.google.com/store/apps/details?id=app.videx.streaming__VIDEX_PLAY_REFERRER__">Get Videx on Android</a><a class="btn btn-ghost" href="https://apps.apple.com/gb/app/videx-streaming-guide/id6785395342">Get Videx on iOS</a></div>
</div>
</body>
</html>",
  "headers": {
    "cache-control": "public, max-age=300",
    "content-security-policy": "frame-ancestors 'none'",
    "content-type": "text/html; charset=utf-8",
    "x-content-type-options": "nosniff",
    "x-frame-options": "DENY",
  },
  "status": 404,
}
`;

exports[`branded 404s > title / android 1`] = `
{
  "body": "<!doctype html>
<html lang="en-GB">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
<title>Title not found | Videx</title>
<meta name="robots" content="noindex">

<style>
:root{color-scheme:dark}
*{box-sizing:border-box}
body{margin:0;background:#0a0a0f;color:#f5f1e8;font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,sans-serif;line-height:1.5}
.wrap{max-width:640px;margin:0 auto;padding:24px 20px 48px}
h1{font-size:26px;line-height:1.15;margin:0 0 6px}
.muted{color:rgba(245,241,232,.6)}
h2{font-size:13px;letter-spacing:1.4px;text-transform:uppercase;color:rgba(245,241,232,.6);margin:24px 0 8px}
.cta{display:flex;flex-wrap:wrap;gap:12px;margin-top:28px;align-items:center}
.btn{display:inline-block;padding:12px 20px;border-radius:999px;font-weight:700;text-decoration:none;font-size:15px}
.btn-primary{background:#e85d25;color:#fff}
.btn-ghost{background:#14141c;color:#f5f1e8;border:1px solid rgba(245,241,232,.16)}
.btn-disabled{opacity:.55;cursor:default}
.cta-hint{font-size:13px;color:rgba(245,241,232,.5)}
footer{margin-top:40px;font-size:12px;color:rgba(245,241,232,.4)}
footer a{color:rgba(245,241,232,.5)}

</style>
</head>
<body>
<div class="wrap">
  <h1>Title not found</h1>
  <p class="muted">We don&#39;t have this title in the Videx catalogue.</p>
  <div class="cta"><a class="btn btn-ghost" href="https://play.google.com/store/apps/details?id=app.videx.streaming__VIDEX_PLAY_REFERRER__">Get Videx on Android</a></div>
</div>
</body>
</html>",
  "headers": {
    "cache-control": "public, max-age=300",
    "content-security-policy": "frame-ancestors 'none'",
    "content-type": "text/html; charset=utf-8",
    "x-content-type-options": "nosniff",
    "x-frame-options": "DENY",
  },
  "status": 404,
}
`;

exports[`branded 404s > title / ios 1`] = `
{
  "body": "<!doctype html>
<html lang="en-GB">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
<title>Title not found | Videx</title>
<meta name="robots" content="noindex">

<style>
:root{color-scheme:dark}
*{box-sizing:border-box}
body{margin:0;background:#0a0a0f;color:#f5f1e8;font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,sans-serif;line-height:1.5}
.wrap{max-width:640px;margin:0 auto;padding:24px 20px 48px}
h1{font-size:26px;line-height:1.15;margin:0 0 6px}
.muted{color:rgba(245,241,232,.6)}
h2{font-size:13px;letter-spacing:1.4px;text-transform:uppercase;color:rgba(245,241,232,.6);margin:24px 0 8px}
.cta{display:flex;flex-wrap:wrap;gap:12px;margin-top:28px;align-items:center}
.btn{display:inline-block;padding:12px 20px;border-radius:999px;font-weight:700;text-decoration:none;font-size:15px}
.btn-primary{background:#e85d25;color:#fff}
.btn-ghost{background:#14141c;color:#f5f1e8;border:1px solid rgba(245,241,232,.16)}
.btn-disabled{opacity:.55;cursor:default}
.cta-hint{font-size:13px;color:rgba(245,241,232,.5)}
footer{margin-top:40px;font-size:12px;color:rgba(245,241,232,.4)}
footer a{color:rgba(245,241,232,.5)}

</style>
</head>
<body>
<div class="wrap">
  <h1>Title not found</h1>
  <p class="muted">We don&#39;t have this title in the Videx catalogue.</p>
  <div class="cta"><a class="btn btn-ghost" href="https://apps.apple.com/gb/app/videx-streaming-guide/id6785395342">Get Videx on iOS</a></div>
</div>
</body>
</html>",
  "headers": {
    "cache-control": "public, max-age=300",
    "content-security-policy": "frame-ancestors 'none'",
    "content-type": "text/html; charset=utf-8",
    "x-content-type-options": "nosniff",
    "x-frame-options": "DENY",
  },
  "status": 404,
}
`;

exports[`branded 404s > title / other 1`] = `
{
  "body": "<!doctype html>
<html lang="en-GB">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
<title>Title not found | Videx</title>
<meta name="robots" content="noindex">

<style>
:root{color-scheme:dark}
*{box-sizing:border-box}
body{margin:0;background:#0a0a0f;color:#f5f1e8;font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,sans-serif;line-height:1.5}
.wrap{max-width:640px;margin:0 auto;padding:24px 20px 48px}
h1{font-size:26px;line-height:1.15;margin:0 0 6px}
.muted{color:rgba(245,241,232,.6)}
h2{font-size:13px;letter-spacing:1.4px;text-transform:uppercase;color:rgba(245,241,232,.6);margin:24px 0 8px}
.cta{display:flex;flex-wrap:wrap;gap:12px;margin-top:28px;align-items:center}
.btn{display:inline-block;padding:12px 20px;border-radius:999px;font-weight:700;text-decoration:none;font-size:15px}
.btn-primary{background:#e85d25;color:#fff}
.btn-ghost{background:#14141c;color:#f5f1e8;border:1px solid rgba(245,241,232,.16)}
.btn-disabled{opacity:.55;cursor:default}
.cta-hint{font-size:13px;color:rgba(245,241,232,.5)}
footer{margin-top:40px;font-size:12px;color:rgba(245,241,232,.4)}
footer a{color:rgba(245,241,232,.5)}

</style>
</head>
<body>
<div class="wrap">
  <h1>Title not found</h1>
  <p class="muted">We don&#39;t have this title in the Videx catalogue.</p>
  <div class="cta"><a class="btn btn-ghost" href="https://play.google.com/store/apps/details?id=app.videx.streaming__VIDEX_PLAY_REFERRER__">Get Videx on Android</a><a class="btn btn-ghost" href="https://apps.apple.com/gb/app/videx-streaming-guide/id6785395342">Get Videx on iOS</a></div>
</div>
</body>
</html>",
  "headers": {
    "cache-control": "public, max-age=300",
    "content-security-policy": "frame-ancestors 'none'",
    "content-type": "text/html; charset=utf-8",
    "x-content-type-options": "nosniff",
    "x-frame-options": "DENY",
  },
  "status": 404,
}
`;
